[package]
name = "foxkv"
version = "0.1.0"
edition = "2026"

[dependencies]
ahash = "0.8"
crc64 = "2"
csv = "1.3"
dashmap = "6"
bytes = "1"
itoa = "1"
log = "0.4"
env_logger = "0.11"
smallvec = { version = "1", features = ["const_generics"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "io-util", "macros", "time", "signal", "sync"] }
